--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,6 +123,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
     string(APPEND LEAN_EXTRA_LINKER_FLAGS " ${EMSCRIPTEN_SETTINGS}")
 endif()
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux" AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm64")
+  # GMP seems to need this
+  string(APPEND LEAN_EXTRA_CXX_FLAGS " -fstack-protector-all")
+endif()
+
 # Added for CTest
 include(CTest)
 
@@ -250,7 +255,7 @@ if("${CMAKE_SYSTEM_NAME}" MATCHES "Emscripten")
     PREFIX libuv
     GIT_REPOSITORY https://github.com/libuv/libuv
     GIT_TAG v1.48.0
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release -DLIBUV_BUILD_TESTS=OFF -DLIBUV_BUILD_SHARED=OFF -DMMAP=OFF -DCMAKE_AR=../emsdk/emsdk-main/upstream/emscripten/emar -DCMAKE_TOOLCHAIN_FILE=../emsdk/emsdk-main/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
+    CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release -DLIBUV_BUILD_TESTS=OFF -DLIBUV_BUILD_SHARED=OFF -DMMAP=OFF -DCMAKE_AR=${CMAKE_SOURCE_DIR}/../emsdk/emsdk-main/upstream/emscripten/emar -DCMAKE_TOOLCHAIN_FILE=${CMAKE_SOURCE_DIR}/../emsdk/emsdk-main/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
     BUILD_IN_SOURCE ON
     INSTALL_COMMAND "")
   set(LIBUV_INCLUDE_DIR "${CMAKE_BINARY_DIR}/libuv/src/libuv/include")
