--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -350,3 +350,9 @@
   run_config:
     <<: *time
     cmd: lean bv_decide_mul.lean
+- attributes:
+    description: bv_decide_mod
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: lean bv_decide_mod.lean
