--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -356,3 +356,15 @@
   run_config:
     <<: *time
     cmd: lean bv_decide_mod.lean
+- attributes:
+    description: big_do
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: lean big_do.lean
+- attributes:
+    description: keyboard_class_unload
+    tags: [slow]
+  run_config:
+    <<: *time
+    cmd: lean keyboard_class_unload.lean
