test: add a benchmark that is slow to elaborate (#5656)
Add an example Lean file that includes an unusually large definition
that takes a long time to elaborate.

It may be that it's difficult to process it more efficiently, but
perhaps someone will discover a way to improve it if it's in the
benchmark suite. Improved performance on this benchmark will likely make
some program analysis and verification tasks within Lean more feasible.

---------

Co-authored-by: Sebastian Ullrich <sebasti@nullri.ch>

--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -362,3 +362,9 @@
   run_config:
     <<: *time
     cmd: lean bv_decide_inequality.lean
+- attributes:
+    description: big_do
+    tags: [fast]
+  run_config:
+    <<: *time
+    cmd: lean big_do.lean
