chore: CI: give Linux Debug unlimited test stack size

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -415,6 +415,10 @@ jobs:
       - name: Test
         id: test
         run: |
+          # give Linux debug unlimited stack, we're not interested in its specific stack usage
+          if [[ '${{ matrix.name }}' == 'Linux Debug' ]]; then
+            ulimit -s unlimited
+          fi
           time ctest --preset ${{ matrix.CMAKE_PRESET || 'release' }} --test-dir build/stage1 -j$NPROC --output-junit test-results.xml ${{ matrix.CTEST_OPTIONS }}
         if: (matrix.wasm || !matrix.cross) && needs.configure.outputs.check-level >= 1
       - name: Test Summary
