--- a/.github/workflows/pr-body.yml
+++ b/.github/workflows/pr-body.yml
@@ -1,6 +1,7 @@
 name: Check PR body for changelog convention
 
 on:
+  merge_group:
   pull_request:
     types: [opened, synchronize, reopened, edited, labeled, converted_to_draft, ready_for_review]
 
@@ -9,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check PR body
+        if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
