fix test ccache

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -326,6 +326,7 @@ if(CCACHE AND NOT CMAKE_CXX_COMPILER_LAUNCHER AND NOT CMAKE_C_COMPILER_LAUNCHER)
   if(CCACHE_PATH)
     set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PATH}")
     set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PATH}")
+    string(APPEND LEAN_TEST_VARS " LEAN_CC_COMPILER_LAUNCHER=${CCACHE_PATH}")
   else()
     message(WARNING "Failed to find ccache, prepare for longer and redundant builds...")
   endif()
