--- a/src/stdlib.make.in
+++ b/src/stdlib.make.in
@@ -9,7 +9,15 @@ export LEAN_PATH=
 export LEAN_CC=${CMAKE_C_COMPILER_LAUNCHER} ${CMAKE_C_COMPILER}
 export LEAN_ABORT_ON_PANIC=1
 
-# LEAN_OPTS: don't use native code (except for primitives) since it is from the previous stage
+ifeq "${STAGE}" "2"
+  # For building stage 1, this option is toggleable in stage0/src/stdlib_flags.h
+  # as there are bootstrapping situations both where it needs and needs not to
+  # be on. On the other hand, in stage 2, which cannot introduce code changes by
+  # itself, it should always be safe to disable it, which can avoid some
+  # `update-stage0` steps in PRs.
+  LEAN_EXTRA_MAKE_OPTS += " -Dinterpreter.prefer_native=false"
+endif
+
 # MORE_DEPS: rebuild the stdlib whenever the compiler has changed
 LEANMAKE_OPTS=\
 	LEAN="${PREV_STAGE}/bin/lean${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"\
