--- a/tests/pkg/user_plugin/lakefile.toml
+++ b/tests/pkg/user_plugin/lakefile.toml
@@ -1,6 +1,10 @@
 name = "user_plugin"
-defaultTargets = ["UserPlugin"]
+defaultTargets = ["UserPlugin", "UserEnvPlugin"]
 
 [[lean_lib]]
 name = "UserPlugin"
+defaultFacets = ["shared"]
+
+[[lean_lib]]
+name = "UserEnvPlugin"
 defaultFacets = ["shared"]
